--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.11.0",
     "knex": "^0.95.4",
     "morgan": "~1.9.1",
+    "mssql": "^7.1.0",
+    "mysql": "^2.18.1",
     "pg": "^8.6.0"
   }
 }
