--- a/.github/workflows/main_VisblueServiceApp.yml
+++ b/.github/workflows/main_VisblueServiceApp.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        npm install
+        npm install -g
         npm install http-errors
       # npm run build --if-present
       # npm run test --if-present
