--- a/.github/workflows/main_TestServiceAppTest.yml
+++ b/.github/workflows/main_TestServiceAppTest.yml
@@ -23,7 +23,8 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        npm install
+        npm install -g
+        npm install http-errors
         npm run build --if-present
         npm run test --if-present
 
